instruments/AIOUSB/Headers/AIOUSB.cs


		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_Initialize(UInt32 DeviceIndex, [In] Byte pConfigBuf, ref UInt32 pConfigBufSize, [In] Char[] CalFileName); // wrapper for SetConfig AND SetCal, nothing more.
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_QueryCal(UInt32 DeviceIndex);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_SetCalAndSave(UInt32 DeviceIndex, [In] Char[] CalFileName, [In] Char[] SaveCalFileName);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_SetCal(UInt32 DeviceIndex, [In] Char[] CalFileName);
		public static UInt32 ADC_SetCal(UInt32 DeviceIndex, String CalFileName)
		{
			UInt32 NameSize = Convert.ToUInt32(CalFileName.Length + 1); // This is the only func in dll that takes a null terminator, so add 1 character for it
			Char[] charName = new Char[NameSize];
			CalFileName.CopyTo(0, charName, 0, CalFileName.Length);
			return ADC_SetCal(DeviceIndex, charName);
		}
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_BulkAcquire(UInt32 DeviceIndex, UInt32 BufSize, out UInt16[] Buf);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_BulkPoll(UInt32 DeviceIndex, out UInt32 BytesLeft);

		// Continuous mode for USB-AIx and DPK-AIx:

		// Callback function delegate for use as function pointer parameter passed to AIOUSB.DLL:
		// Declare delegate -- defines required signature:
		// Original from Pascal: procedure ADCallback(pBuf: PWord; BufSize, Flags, Context: LongWord); cdecl;
		// Must be Cdecl not default stdcall to match dll:
		// We need to use Intptr for the buffer:
		// Application probably needs to use GCHandle.Alloc(foo), where "foo" is the callback function name, to prevent garbage collection of the callback function
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void ADCallback(IntPtr pBuf, UInt32 BufSize, UInt32 Flags, UInt32 Context);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_BulkContinuousCallbackStart(UInt32 DeviceIndex, UInt32 BufSize, UInt32 BaseBufCount, UInt32 Context, ADCallback pCallback);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_FullStartRing(UInt32 DeviceIndex, out byte[] pConfigBuf, ref UInt32 ConfigBufSize, [ Out] Char[] CalFileName, ref double pCounterHz, UInt32 RingBufferSize, UInt32 PacketsPerBlock);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_ReadData(UInt32 DeviceIndex, out byte[] pConfigBuf, ref UInt32 ScansToRead, ref double[] pData, ref double Timeout);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_ReadData(UInt32 DeviceIndex, out byte[] pConfigBuf, ref UInt32 ScansToRead, ref double[][] pDataScans, ref double Timeout);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_BulkContinuousEnd(UInt32 DeviceIndex, UInt32 pIOStatus);
		#endregion
		#endregion
		#region DAC (Analog Output (Digital-to-Analog)) Specific Functions

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACDirect(UInt32 DeviceIndex, UInt16 Channel, UInt16 Counts);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACMultiDirect(UInt32 DeviceIndex, [In] UInt16[] pDACData, UInt32 DACDataCount);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACSetBoardRange(UInt32 DeviceIndex, UInt32 RangeCode);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACSetChannelCal(UInt32 DeviceIndex, UInt32 Channel, [In] Char[] CalFileName);
		public static UInt32 DACSetChannelCal(UInt32 DeviceIndex, UInt32 Channel, String CalFileName)
		{
			UInt32 NameSize = Convert.ToUInt32(CalFileName.Length);
			Char[] charName = new Char[NameSize];
			CalFileName.CopyTo(0, charName, 0, CalFileName.Length);
			return DACSetChannelCal(DeviceIndex, Channel, charName);
		}

		#region DAC Functions for USB-DA12-8A only
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACOutputProcess(UInt32 DeviceIndex, ref Double ClockHz, UInt32 NumSamples, [In] UInt16[] SampleData);

		// More DAC Functions for USB-DA12-8A only (advanced, rare)
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACOutputOpen(UInt32 DeviceIndex, ref Double ClockHZ);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACOutputCloseNoEnd(UInt32 DeviceIndex, UInt32 bWait);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACOutputFrameRaw(UInt32 DeviceIndex, UInt32 FramePoints, [In] UInt16[] FrameData);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACOutputSetCount(UInt32 DeviceIndex, UInt32 NewCount);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACOutputSetInterlock(UInt32 DeviceIndex, UInt32 bInterlock);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACOutputStart(UInt32 DeviceIndex);
		#endregion
		#endregion
		#region CTR (Counter/Timer (8254)) Specific Functions
		// more 8254 functions (rare, advanced)
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254Load(UInt32 DeviceIndex, UInt32 BlockIndex, UInt32 CounterIndex, UInt16 LoadValue);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254Mode(UInt32 DeviceIndex, UInt32 BlockIndex, UInt32 CounterIndex, UInt32 Mode);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254ModeLoad(UInt32 DeviceIndex, UInt32 BlockIndex, UInt32 CounterIndex, UInt32 Mode, UInt16 LoadValue);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254Read(UInt32 DeviceIndex, UInt32 BlockIndex, UInt32 CounterIndex, ref UInt16 ReadValue);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254ReadStatus(UInt32 DeviceIndex, UInt32 BlockIndex, UInt32 CounterIndex, ref UInt16 ReadValue, ref Byte Status);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254ReadModeLoad(UInt32 DeviceIndex, UInt32 BlockIndex, UInt32 CounterIndex, UInt32 Mode, UInt16 LoadValue, ref UInt16 ReadValue);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_StartOutputFreq(UInt32 DeviceIndex, UInt32 BlockIndex, ref Double Hz);
		#region USB-CTR-15 Specific Functions
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254ReadAll(UInt32 DeviceIndex, out UInt16[] pData);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254SelectGate(UInt32 DeviceIndex, UInt32 GateIndex);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_8254ReadLatched(UInt32 DeviceIndex, out UInt16[] pData);

		// Legacy functions that were for a custom Application
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_SetWaitGates(UInt32 DeviceIndex, Byte A, Byte B);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_EndWaitGates(UInt32 DeviceIndex);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_WaitForGate(UInt32 DeviceIndex, Byte GateIndex, ref UInt16 pContent);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_StartMeasuringPulseWidth(UInt32 DeviceIndex);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_StopMeasuringPulseWidth(UInt32 DeviceIndex);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CTR_GetPulseWidthMeasurement(UInt32 DeviceIndex, UInt32 BlockIndex, UInt32 CounterIndex, out UInt16 pReadValue);
		#endregion
		#endregion
		#region These functions are reserved for factory use only, or are deprecated
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 GenericVendorRead(UInt32 DeviceIndex, Byte Request, UInt16 Value, UInt16 Index, ref UInt32 pDataSize, byte[] pData);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 GenericVendorWrite(UInt32 DeviceIndex, Byte Request, UInt16 Value, UInt16 Index, UInt32 DataSize, ref byte[] pData);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_SPI_Read(UInt32 DeviceIndex, UInt32 Address, byte Reg, out byte[] pValue);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_SPI_Write(UInt32 DeviceIndex, UInt32 Address, byte Reg, byte Value);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_Initialize(UInt32 DeviceIndex, [In, Out] byte[] pConfigBuf, ref UInt32 ConfigBufSize, [In, Out] Char[] CalFileName); // Unicode
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_GetImmediate(UInt32 DeviceIndex, UInt32 Channel, out UInt16 pBuf);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DACOutputClose(UInt32 DeviceIndex, UInt32 bWait);
